# Mojo-vs-Cpp-DataStructures

./: .gitignore  Makefile  README.md  pixi.toml
.github/workflows/: deploy-implementation-compare-pages.yml
common/: code_metrics.py  compare_implementations.py  generate_hash_assets.py  generate_hash_golden.py  generate_keys.py  hash_reference.py  hash_spec.json  hash_spec.py  implementation_compare_spec.json  params.json  run_benchmarks.py  verify_hash_conformance.py  verify_structure_parity.py
common/analysis/: collect_build_metrics.py  summarize_results.py
common/plots/: plot_results.py
cpp/: CMakeLists.txt
cpp/benches/: bench_main.cpp
cpp/include/: benchmark_utils.hpp  blocked_bloom.hpp  elias_fano.hpp  hash.hpp  quotient_filter.hpp
cpp/tests/: test_main.cpp
cpp/tools/: hash_cli.cpp  structure_parity.cpp
mojo/: bench_main.mojo  hash_cli.mojo  structure_parity.mojo
mojo/src/db_structures/: benchmark_utils.mojo  blocked_bloom.mojo  elias_fano.mojo  hash.mojo  quotient_filter.mojo
mojo/tests/: test_main.mojo
